# Zenit-Tauri

./: .gitignore  LICENSE  README.md  Rouchant.Zenit.yaml  build-log.txt  convert_to_bmp.ps1  get-specs.ps1  index.html  main.js  make_square.ps1  package-lock.json  package.json  pnpm-lock.yaml  preload.js  prepare_nsis_assets.ps1  return.html  scratch.rs  setup-autostart.ps1  system-setup.ps1  vite.config.js
.github/workflows/: auto-release.yml  windows-store-publish.yml
manifests/r/Rouchant/Zenit/1.0.3/: Rouchant.Zenit.installer.yaml  Rouchant.Zenit.locale.es-ES.yaml  Rouchant.Zenit.yaml
manifests/r/Rouchant/Zenit/1.0.4/: Rouchant.Zenit.installer.yaml  Rouchant.Zenit.locale.es-ES.yaml  Rouchant.Zenit.yaml
manifests/r/Rouchant/Zenit/1.0.5/: Rouchant.Zenit.installer.yaml  Rouchant.Zenit.locale.es-ES.yaml  (+1 more)
public/: return.html
scratch/: get_product_code.ps1
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: guardian.rs  lib.rs  setup.rs  state.rs
src-tauri/src/commands/: mod.rs  system.rs  vault.rs  window.rs
src/api/: tauriApi.js
src/components/: Header.vue  SpecCard.vue  SpecsGrid.vue  VideoPlayer.vue
src/components/Modals/: AdminModal.vue  PasswordModal.vue  SpecsModal.vue
src/store/: specs.js
src/style/: style.css
src/style/css/: base.css  components.css  fonts.css  layout.css  modals.css  themes.css  views.css
winget/: Rouchant.Zenit.installer.yaml  Rouchant.Zenit.locale.en-US.yaml  Rouchant.Zenit.yaml
(+63 files in other folders)
