[package]
name = "zenit"
version = "1.1.1"
description = "Zenit - Showcase App for POS Laptops"
authors = ["Zenit"]
license = "ISC"
repository = "https://github.com/Rouchant/Zenit-Tauri"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tokio = { version = "1.51.1", features = ["full"] }
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_Foundation", "Win32_System_SystemInformation"] }
tauri-plugin-single-instance = "2.0.0-rc.0"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
tauri-plugin-prevent-default = "4"
sysinfo = "0.30"
wmi = "0.13"
regex = "1.10"
